# aihil

./: .bestpractices.json  .gitignore  AGENTS.md  AI_AGENT_QUICKSTART.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  TROUBLESHOOTING.md  llms.txt  npm-shrinkwrap.json  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  npm-publish.yml  release.yml  scorecards.yml
docs/: release-strategy.md  security-design.md
docs/demo/: README.md
examples/nucleo-f446re_demo/: .gitignore
examples/nucleo-f446re_demo/nucleo-f446re_demo/: .gitignore  CMakeLists.txt  CMakePresets.json
examples/nucleo-f446re_demo/nucleo-f446re_demo/Src/: main.c
examples/nucleo-f446re_demo/nucleo-f446re_demo/cmake/: gnu-tools-for-stm32.cmake
scripts/: copy-assets.mjs
skills/aihil-config-setup/: SKILL.md
src/aihil/: __main__.py  artifacts.ts  can.ts  comports.ts  comstdio.ts  config.py  config.ts  debugger.ts  index.ts  main.ts  mcp.ts  report.ts  stdio.ts  tools.ts  types.ts  version.ts
src/aihil/debuggers/: openocd.ts  stlink.ts
src/aihil/schemas/: config.schema.json
src/aihil/templates/: mcp.json
tests/: README.md  test_cli.py  test_config.py
tests-ts/: property-arbitraries.js  run-tests.mjs
tests-ts/fixtures/: fake-openocd.js  fake-stlink-unconfirmed.js  fake-stlink.js
