[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aihil"
version = "0.1.0"
description = "Generic hardware-in-the-loop debugger interface for AI agents"
readme = "README.md"
authors = [
  { name = "Hannes Pauli", email = "mail@hannes-pauli.de" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "PyYAML",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "httpx2",
]

[project.scripts]
aihil = "aihil.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
